RESOLVED FIXED105319
[GStreamer] Buffering ranges are reported incorrectly with GStreamer 1.0
https://bugs.webkit.org/show_bug.cgi?id=105319
Summary [GStreamer] Buffering ranges are reported incorrectly with GStreamer 1.0
Xabier Rodríguez Calvar
Reported 2012-12-18 09:55:01 PST
[GStreamer] Buffering ranges are reported incorrectly with GStreamer 1.0
Attachments
Patch (1.79 KB, patch)
2012-12-18 10:01 PST, Xabier Rodríguez Calvar
no flags
Patch (3.08 KB, patch)
2012-12-20 10:02 PST, Xabier Rodríguez Calvar
no flags
Patch (3.08 KB, patch)
2012-12-20 15:32 PST, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2012-12-18 10:01:02 PST
Created attachment 179971 [details] Patch Fixes problem with reporting the buffering ranges in GStreamer 1.0
Philippe Normand
Comment 2 2012-12-18 10:05:26 PST
Comment on attachment 179971 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179971&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:749 > +#if !defined(GST_API_VERSION_1) && GST_CHECK_VERSION(0, 10, 31) This code should work for both gst 1.0 and 0.10. If there's a bug when gst 1.0 is enabled it should be fixed :)
Xabier Rodríguez Calvar
Comment 3 2012-12-20 10:02:25 PST
Created attachment 180357 [details] Patch There is a bug in GStreamer 0.10, which is reporting the percentage without using the scale as it should happen. This is fixed in 1.0 so code paths must be different one more time. I am not adding the cq? because I cannot be here to check the bots, thought I would be glad if the patch gets reviewed.
Philippe Normand
Comment 4 2012-12-20 12:09:10 PST
Comment on attachment 180357 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180357&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:85 > +static const gint64 percentMax = GST_FORMAT_PERCENT_MAX; As this is a global static variable it should probably have a g prefix like the gPlaybinName above, new name would be gPercentMax.
Xabier Rodríguez Calvar
Comment 5 2012-12-20 15:32:54 PST
Created attachment 180423 [details] Patch Fixed contant variable name problem. Still not setting the cq? to wait to be able to watch the bots
WebKit Review Bot
Comment 6 2012-12-21 02:48:03 PST
Comment on attachment 180423 [details] Patch Clearing flags on attachment: 180423 Committed r138364: <http://trac.webkit.org/changeset/138364>
WebKit Review Bot
Comment 7 2012-12-21 02:48:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.